y.output
Nonterminals useless in grammar

   help_id_comma


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | function program

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    4 help_dec_semi_par: %empty
    5                  | declaration_par SEMICOLON help_dec_semi_par

    6 help_dec_semi: %empty
    7              | declaration SEMICOLON help_dec_semi

    8 help_state_semi: statement SEMICOLON
    9                | statement SEMICOLON help_state_semi

   10 declaration_par: ident COLON help_array INTEGER
   11                | ident COMMA declaration_par

   12 declaration: ident COLON help_array INTEGER
   13            | ident COMMA declaration

   14 help_array: %empty
   15           | ARRAY L_SQUARE_BRACKET number R_SQUARE_BRACKET OF

   16 statement: IF bool_expr THEN help_if_then ENDIF
   17          | WHILE bool_expr BEGINLOOP help_state_semi ENDLOOP
   18          | DO BEGINLOOP help_state_semi ENDLOOP WHILE bool_expr
   19          | FOR var ASSIGN number SEMICOLON bool_expr SEMICOLON var ASSIGN expression BEGINLOOP help_state_semi ENDLOOP
   20          | READ help_var_comma
   21          | WRITE help_var_comma
   22          | CONTINUE
   23          | RETURN expression
   24          | var ASSIGN expression

   25 bool_expr: relation_and_expr help_or_rae

   26 help_if_then: help_state_semi
   27             | help_state_semi ELSE help_state_semi

   28 help_or_rae: %empty
   29            | OR relation_and_expr help_or_rae

   30 help_var_comma: var COMMA help_var_comma
   31               | var

   32 relation_and_expr: relation_expr help_and_re

   33 help_and_re: %empty
   34            | AND relation_expr help_and_re

   35 relation_expr: NOT help_re_choices
   36              | help_re_choices

   37 help_re_choices: expression comp expression
   38                | TRUE
   39                | FALSE
   40                | L_PAREN bool_expr R_PAREN

   41 comp: EQ
   42     | NEQ
   43     | LT
   44     | GT
   45     | LTE
   46     | GTE

   47 expression: multiplicative_expr help_pm_me

   48 help_pm_me: %empty
   49           | ADD multiplicative_expr help_pm_me
   50           | SUB multiplicative_expr help_pm_me

   51 multiplicative_expr: term help_mdm_term

   52 help_mdm_term: %empty
   53              | MULT term help_mdm_term
   54              | DIV term help_mdm_term
   55              | MOD term help_mdm_term

   56 term: SUB help_vne_choices
   57     | help_vne_choices
   58     | ident L_PAREN help_expr R_PAREN
   59     | ident L_PAREN R_PAREN

   60 help_vne_choices: var
   61                 | number
   62                 | L_PAREN expression R_PAREN

   63 help_expr: expression
   64          | expression COMMA help_expr

   65 var: ident
   66    | ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   67 ident: IDENT

   68 number: NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 68
FUNCTION (259) 3
BEGIN_PARAMS (260) 3
END_PARAMS (261) 3
BEGIN_LOCALS (262) 3
END_LOCALS (263) 3
BEGIN_BODY (264) 3
END_BODY (265) 3
INTEGER (266) 10 12
ARRAY (267) 15
OF (268) 15
IF (269) 16
THEN (270) 16
ENDIF (271) 16
ELSE (272) 27
WHILE (273) 17 18
DO (274) 18
FOR (275) 19
BEGINLOOP (276) 17 18 19
ENDLOOP (277) 17 18 19
CONTINUE (278) 22
READ (279) 20
WRITE (280) 21
AND (281) 34
OR (282) 29
NOT (283) 35
TRUE (284) 38
FALSE (285) 39
RETURN (286) 23
SUB (287) 50 56
ADD (288) 49
MULT (289) 53
DIV (290) 54
MOD (291) 55
EQ (292) 41
NEQ (293) 42
LT (294) 43
GT (295) 44
LTE (296) 45
GTE (297) 46
IDENT (298) 67
SEMICOLON (299) 3 5 7 8 9 19
COLON (300) 10 12
COMMA (301) 11 13 30 64
L_PAREN (302) 40 58 59 62
R_PAREN (303) 40 58 59 62
L_SQUARE_BRACKET (304) 15 66
R_SQUARE_BRACKET (305) 15 66
ASSIGN (306) 19 24


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1 2, on right: 0 2
function (54)
    on left: 3, on right: 2
help_dec_semi_par (55)
    on left: 4 5, on right: 3 5
help_dec_semi (56)
    on left: 6 7, on right: 3 7
help_state_semi (57)
    on left: 8 9, on right: 3 9 17 18 19 26 27
declaration_par (58)
    on left: 10 11, on right: 5 11
declaration (59)
    on left: 12 13, on right: 7 13
help_array (60)
    on left: 14 15, on right: 10 12
statement (61)
    on left: 16 17 18 19 20 21 22 23 24, on right: 8 9
bool_expr (62)
    on left: 25, on right: 16 17 18 19 40
help_if_then (63)
    on left: 26 27, on right: 16
help_or_rae (64)
    on left: 28 29, on right: 25 29
help_var_comma (65)
    on left: 30 31, on right: 20 21 30
relation_and_expr (66)
    on left: 32, on right: 25 29
help_and_re (67)
    on left: 33 34, on right: 32 34
relation_expr (68)
    on left: 35 36, on right: 32 34
help_re_choices (69)
    on left: 37 38 39 40, on right: 35 36
comp (70)
    on left: 41 42 43 44 45 46, on right: 37
expression (71)
    on left: 47, on right: 19 23 24 37 62 63 64 66
help_pm_me (72)
    on left: 48 49 50, on right: 47 49 50
multiplicative_expr (73)
    on left: 51, on right: 47 49 50
help_mdm_term (74)
    on left: 52 53 54 55, on right: 51 53 54 55
term (75)
    on left: 56 57 58 59, on right: 51 53 54 55
help_vne_choices (76)
    on left: 60 61 62, on right: 56 57
help_expr (77)
    on left: 63 64, on right: 58 64
var (78)
    on left: 65 66, on right: 19 24 30 31 60
ident (79)
    on left: 67, on right: 3 10 11 12 13 58 59 65 66
number (80)
    on left: 68, on right: 15 19 61


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program   go to state 2
    function  go to state 3


State 1

    3 function: FUNCTION . ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    IDENT  shift, and go to state 4

    ident  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    2 program: function . program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program   go to state 7
    function  go to state 3


State 4

   67 ident: IDENT .

    $default  reduce using rule 67 (ident)


State 5

    3 function: FUNCTION ident . SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 program: function program .

    $default  reduce using rule 2 (program)


State 8

    3 function: FUNCTION ident SEMICOLON . BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 9

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS . help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 4 (help_dec_semi_par)

    help_dec_semi_par  go to state 10
    declaration_par    go to state 11
    ident              go to state 12


State 10

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par . END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    END_PARAMS  shift, and go to state 13


State 11

    5 help_dec_semi_par: declaration_par . SEMICOLON help_dec_semi_par

    SEMICOLON  shift, and go to state 14


State 12

   10 declaration_par: ident . COLON help_array INTEGER
   11                | ident . COMMA declaration_par

    COLON  shift, and go to state 15
    COMMA  shift, and go to state 16


State 13

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS . BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    BEGIN_LOCALS  shift, and go to state 17


State 14

    5 help_dec_semi_par: declaration_par SEMICOLON . help_dec_semi_par

    IDENT  shift, and go to state 4

    $default  reduce using rule 4 (help_dec_semi_par)

    help_dec_semi_par  go to state 18
    declaration_par    go to state 11
    ident              go to state 12


State 15

   10 declaration_par: ident COLON . help_array INTEGER

    ARRAY  shift, and go to state 19

    $default  reduce using rule 14 (help_array)

    help_array  go to state 20


State 16

   11 declaration_par: ident COMMA . declaration_par

    IDENT  shift, and go to state 4

    declaration_par  go to state 21
    ident            go to state 12


State 17

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS . help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 6 (help_dec_semi)

    help_dec_semi  go to state 22
    declaration    go to state 23
    ident          go to state 24


State 18

    5 help_dec_semi_par: declaration_par SEMICOLON help_dec_semi_par .

    $default  reduce using rule 5 (help_dec_semi_par)


State 19

   15 help_array: ARRAY . L_SQUARE_BRACKET number R_SQUARE_BRACKET OF

    L_SQUARE_BRACKET  shift, and go to state 25


State 20

   10 declaration_par: ident COLON help_array . INTEGER

    INTEGER  shift, and go to state 26


State 21

   11 declaration_par: ident COMMA declaration_par .

    $default  reduce using rule 11 (declaration_par)


State 22

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi . END_LOCALS BEGIN_BODY help_state_semi END_BODY

    END_LOCALS  shift, and go to state 27


State 23

    7 help_dec_semi: declaration . SEMICOLON help_dec_semi

    SEMICOLON  shift, and go to state 28


State 24

   12 declaration: ident . COLON help_array INTEGER
   13            | ident . COMMA declaration

    COLON  shift, and go to state 29
    COMMA  shift, and go to state 30


State 25

   15 help_array: ARRAY L_SQUARE_BRACKET . number R_SQUARE_BRACKET OF

    NUMBER  shift, and go to state 31

    number  go to state 32


State 26

   10 declaration_par: ident COLON help_array INTEGER .

    $default  reduce using rule 10 (declaration_par)


State 27

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS . BEGIN_BODY help_state_semi END_BODY

    BEGIN_BODY  shift, and go to state 33


State 28

    7 help_dec_semi: declaration SEMICOLON . help_dec_semi

    IDENT  shift, and go to state 4

    $default  reduce using rule 6 (help_dec_semi)

    help_dec_semi  go to state 34
    declaration    go to state 23
    ident          go to state 24


State 29

   12 declaration: ident COLON . help_array INTEGER

    ARRAY  shift, and go to state 19

    $default  reduce using rule 14 (help_array)

    help_array  go to state 35


State 30

   13 declaration: ident COMMA . declaration

    IDENT  shift, and go to state 4

    declaration  go to state 36
    ident        go to state 24


State 31

   68 number: NUMBER .

    $default  reduce using rule 68 (number)


State 32

   15 help_array: ARRAY L_SQUARE_BRACKET number . R_SQUARE_BRACKET OF

    R_SQUARE_BRACKET  shift, and go to state 37


State 33

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY . help_state_semi END_BODY

    IF        shift, and go to state 38
    WHILE     shift, and go to state 39
    DO        shift, and go to state 40
    FOR       shift, and go to state 41
    CONTINUE  shift, and go to state 42
    READ      shift, and go to state 43
    WRITE     shift, and go to state 44
    RETURN    shift, and go to state 45
    IDENT     shift, and go to state 4

    help_state_semi  go to state 46
    statement        go to state 47
    var              go to state 48
    ident            go to state 49


State 34

    7 help_dec_semi: declaration SEMICOLON help_dec_semi .

    $default  reduce using rule 7 (help_dec_semi)


State 35

   12 declaration: ident COLON help_array . INTEGER

    INTEGER  shift, and go to state 50


State 36

   13 declaration: ident COMMA declaration .

    $default  reduce using rule 13 (declaration)


State 37

   15 help_array: ARRAY L_SQUARE_BRACKET number R_SQUARE_BRACKET . OF

    OF  shift, and go to state 51


State 38

   16 statement: IF . bool_expr THEN help_if_then ENDIF

    NUMBER   shift, and go to state 31
    NOT      shift, and go to state 52
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    bool_expr            go to state 57
    relation_and_expr    go to state 58
    relation_expr        go to state 59
    help_re_choices      go to state 60
    expression           go to state 61
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 39

   17 statement: WHILE . bool_expr BEGINLOOP help_state_semi ENDLOOP

    NUMBER   shift, and go to state 31
    NOT      shift, and go to state 52
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    bool_expr            go to state 68
    relation_and_expr    go to state 58
    relation_expr        go to state 59
    help_re_choices      go to state 60
    expression           go to state 61
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 40

   18 statement: DO . BEGINLOOP help_state_semi ENDLOOP WHILE bool_expr

    BEGINLOOP  shift, and go to state 69


State 41

   19 statement: FOR . var ASSIGN number SEMICOLON bool_expr SEMICOLON var ASSIGN expression BEGINLOOP help_state_semi ENDLOOP

    IDENT  shift, and go to state 4

    var    go to state 70
    ident  go to state 49


State 42

   22 statement: CONTINUE .

    $default  reduce using rule 22 (statement)


State 43

   20 statement: READ . help_var_comma

    IDENT  shift, and go to state 4

    help_var_comma  go to state 71
    var             go to state 72
    ident           go to state 49


State 44

   21 statement: WRITE . help_var_comma

    IDENT  shift, and go to state 4

    help_var_comma  go to state 73
    var             go to state 72
    ident           go to state 49


State 45

   23 statement: RETURN . expression

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    expression           go to state 75
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 46

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi . END_BODY

    END_BODY  shift, and go to state 76


State 47

    8 help_state_semi: statement . SEMICOLON
    9                | statement . SEMICOLON help_state_semi

    SEMICOLON  shift, and go to state 77


State 48

   24 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 78


State 49

   65 var: ident .
   66    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 79

    $default  reduce using rule 65 (var)


State 50

   12 declaration: ident COLON help_array INTEGER .

    $default  reduce using rule 12 (declaration)


State 51

   15 help_array: ARRAY L_SQUARE_BRACKET number R_SQUARE_BRACKET OF .

    $default  reduce using rule 15 (help_array)


State 52

   35 relation_expr: NOT . help_re_choices

    NUMBER   shift, and go to state 31
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    help_re_choices      go to state 80
    expression           go to state 61
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 53

   38 help_re_choices: TRUE .

    $default  reduce using rule 38 (help_re_choices)


State 54

   39 help_re_choices: FALSE .

    $default  reduce using rule 39 (help_re_choices)


State 55

   56 term: SUB . help_vne_choices

    NUMBER   shift, and go to state 31
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    help_vne_choices  go to state 81
    var               go to state 65
    ident             go to state 49
    number            go to state 67


State 56

   40 help_re_choices: L_PAREN . bool_expr R_PAREN
   62 help_vne_choices: L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 31
    NOT      shift, and go to state 52
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    bool_expr            go to state 82
    relation_and_expr    go to state 58
    relation_expr        go to state 59
    help_re_choices      go to state 60
    expression           go to state 83
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 57

   16 statement: IF bool_expr . THEN help_if_then ENDIF

    THEN  shift, and go to state 84


State 58

   25 bool_expr: relation_and_expr . help_or_rae

    OR  shift, and go to state 85

    $default  reduce using rule 28 (help_or_rae)

    help_or_rae  go to state 86


State 59

   32 relation_and_expr: relation_expr . help_and_re

    AND  shift, and go to state 87

    $default  reduce using rule 33 (help_and_re)

    help_and_re  go to state 88


State 60

   36 relation_expr: help_re_choices .

    $default  reduce using rule 36 (relation_expr)


State 61

   37 help_re_choices: expression . comp expression

    EQ   shift, and go to state 89
    NEQ  shift, and go to state 90
    LT   shift, and go to state 91
    GT   shift, and go to state 92
    LTE  shift, and go to state 93
    GTE  shift, and go to state 94

    comp  go to state 95


State 62

   47 expression: multiplicative_expr . help_pm_me

    SUB  shift, and go to state 96
    ADD  shift, and go to state 97

    $default  reduce using rule 48 (help_pm_me)

    help_pm_me  go to state 98


State 63

   51 multiplicative_expr: term . help_mdm_term

    MULT  shift, and go to state 99
    DIV   shift, and go to state 100
    MOD   shift, and go to state 101

    $default  reduce using rule 52 (help_mdm_term)

    help_mdm_term  go to state 102


State 64

   57 term: help_vne_choices .

    $default  reduce using rule 57 (term)


State 65

   60 help_vne_choices: var .

    $default  reduce using rule 60 (help_vne_choices)


State 66

   58 term: ident . L_PAREN help_expr R_PAREN
   59     | ident . L_PAREN R_PAREN
   65 var: ident .
   66    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 103
    L_SQUARE_BRACKET  shift, and go to state 79

    $default  reduce using rule 65 (var)


State 67

   61 help_vne_choices: number .

    $default  reduce using rule 61 (help_vne_choices)


State 68

   17 statement: WHILE bool_expr . BEGINLOOP help_state_semi ENDLOOP

    BEGINLOOP  shift, and go to state 104


State 69

   18 statement: DO BEGINLOOP . help_state_semi ENDLOOP WHILE bool_expr

    IF        shift, and go to state 38
    WHILE     shift, and go to state 39
    DO        shift, and go to state 40
    FOR       shift, and go to state 41
    CONTINUE  shift, and go to state 42
    READ      shift, and go to state 43
    WRITE     shift, and go to state 44
    RETURN    shift, and go to state 45
    IDENT     shift, and go to state 4

    help_state_semi  go to state 105
    statement        go to state 47
    var              go to state 48
    ident            go to state 49


State 70

   19 statement: FOR var . ASSIGN number SEMICOLON bool_expr SEMICOLON var ASSIGN expression BEGINLOOP help_state_semi ENDLOOP

    ASSIGN  shift, and go to state 106


State 71

   20 statement: READ help_var_comma .

    $default  reduce using rule 20 (statement)


State 72

   30 help_var_comma: var . COMMA help_var_comma
   31               | var .

    COMMA  shift, and go to state 107

    $default  reduce using rule 31 (help_var_comma)


State 73

   21 statement: WRITE help_var_comma .

    $default  reduce using rule 21 (statement)


State 74

   62 help_vne_choices: L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    expression           go to state 108
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 75

   23 statement: RETURN expression .

    $default  reduce using rule 23 (statement)


State 76

    3 function: FUNCTION ident SEMICOLON BEGIN_PARAMS help_dec_semi_par END_PARAMS BEGIN_LOCALS help_dec_semi END_LOCALS BEGIN_BODY help_state_semi END_BODY .

    $default  reduce using rule 3 (function)


State 77

    8 help_state_semi: statement SEMICOLON .
    9                | statement SEMICOLON . help_state_semi

    IF        shift, and go to state 38
    WHILE     shift, and go to state 39
    DO        shift, and go to state 40
    FOR       shift, and go to state 41
    CONTINUE  shift, and go to state 42
    READ      shift, and go to state 43
    WRITE     shift, and go to state 44
    RETURN    shift, and go to state 45
    IDENT     shift, and go to state 4

    $default  reduce using rule 8 (help_state_semi)

    help_state_semi  go to state 109
    statement        go to state 47
    var              go to state 48
    ident            go to state 49


State 78

   24 statement: var ASSIGN . expression

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    expression           go to state 110
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 79

   66 var: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    expression           go to state 111
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 80

   35 relation_expr: NOT help_re_choices .

    $default  reduce using rule 35 (relation_expr)


State 81

   56 term: SUB help_vne_choices .

    $default  reduce using rule 56 (term)


State 82

   40 help_re_choices: L_PAREN bool_expr . R_PAREN

    R_PAREN  shift, and go to state 112


State 83

   37 help_re_choices: expression . comp expression
   62 help_vne_choices: L_PAREN expression . R_PAREN

    EQ       shift, and go to state 89
    NEQ      shift, and go to state 90
    LT       shift, and go to state 91
    GT       shift, and go to state 92
    LTE      shift, and go to state 93
    GTE      shift, and go to state 94
    R_PAREN  shift, and go to state 113

    comp  go to state 95


State 84

   16 statement: IF bool_expr THEN . help_if_then ENDIF

    IF        shift, and go to state 38
    WHILE     shift, and go to state 39
    DO        shift, and go to state 40
    FOR       shift, and go to state 41
    CONTINUE  shift, and go to state 42
    READ      shift, and go to state 43
    WRITE     shift, and go to state 44
    RETURN    shift, and go to state 45
    IDENT     shift, and go to state 4

    help_state_semi  go to state 114
    statement        go to state 47
    help_if_then     go to state 115
    var              go to state 48
    ident            go to state 49


State 85

   29 help_or_rae: OR . relation_and_expr help_or_rae

    NUMBER   shift, and go to state 31
    NOT      shift, and go to state 52
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    relation_and_expr    go to state 116
    relation_expr        go to state 59
    help_re_choices      go to state 60
    expression           go to state 61
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 86

   25 bool_expr: relation_and_expr help_or_rae .

    $default  reduce using rule 25 (bool_expr)


State 87

   34 help_and_re: AND . relation_expr help_and_re

    NUMBER   shift, and go to state 31
    NOT      shift, and go to state 52
    TRUE     shift, and go to state 53
    FALSE    shift, and go to state 54
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 56

    relation_expr        go to state 117
    help_re_choices      go to state 60
    expression           go to state 61
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 88

   32 relation_and_expr: relation_expr help_and_re .

    $default  reduce using rule 32 (relation_and_expr)


State 89

   41 comp: EQ .

    $default  reduce using rule 41 (comp)


State 90

   42 comp: NEQ .

    $default  reduce using rule 42 (comp)


State 91

   43 comp: LT .

    $default  reduce using rule 43 (comp)


State 92

   44 comp: GT .

    $default  reduce using rule 44 (comp)


State 93

   45 comp: LTE .

    $default  reduce using rule 45 (comp)


State 94

   46 comp: GTE .

    $default  reduce using rule 46 (comp)


State 95

   37 help_re_choices: expression comp . expression

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    expression           go to state 118
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 96

   50 help_pm_me: SUB . multiplicative_expr help_pm_me

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    multiplicative_expr  go to state 119
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 97

   49 help_pm_me: ADD . multiplicative_expr help_pm_me

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    multiplicative_expr  go to state 120
    term                 go to state 63
    help_vne_choices     go to state 64
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 98

   47 expression: multiplicative_expr help_pm_me .

    $default  reduce using rule 47 (expression)


State 99

   53 help_mdm_term: MULT . term help_mdm_term

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    term              go to state 121
    help_vne_choices  go to state 64
    var               go to state 65
    ident             go to state 66
    number            go to state 67


State 100

   54 help_mdm_term: DIV . term help_mdm_term

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    term              go to state 122
    help_vne_choices  go to state 64
    var               go to state 65
    ident             go to state 66
    number            go to state 67


State 101

   55 help_mdm_term: MOD . term help_mdm_term

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74

    term              go to state 123
    help_vne_choices  go to state 64
    var               go to state 65
    ident             go to state 66
    number            go to state 67


State 102

   51 multiplicative_expr: term help_mdm_term .

    $default  reduce using rule 51 (multiplicative_expr)


State 103

   58 term: ident L_PAREN . help_expr R_PAREN
   59     | ident L_PAREN . R_PAREN

    NUMBER   shift, and go to state 31
    SUB      shift, and go to state 55
    IDENT    shift, and go to state 4
    L_PAREN  shift, and go to state 74
    R_PAREN  shift, and go to state 124

    expression           go to state 125
    multiplicative_expr  go to state 62
    term                 go to state 63
    help_vne_choices     go to state 64
    help_expr            go to state 126
    var                  go to state 65
    ident                go to state 66
    number               go to state 67


State 104

   17 statement: WHILE bool_expr BEGINLOOP . help_state_semi ENDLOOP

    IF        shift, and go to state 38
    WHILE     shift, and go to state 39
    DO        shift, and go to state 40
    FOR       shift, and go to state 41
    CONTINUE  shift, and go to state 42
    READ      shift, and go to state 43
    WRITE     shift, and go to state 44
    RETURN    shift, and go to state 45
    IDENT     shift, and go to state 4

    help_state_semi  go to state 127
    statement        go to state 47
    var              go to state 48
    ident            go to state 49


State 105

   18 statement: DO BEGINLOOP help_state_semi . ENDLOOP WHILE bool_expr

    ENDLOOP  shift, and go to state 128


State 106

   19 statement: FOR var ASSIGN . number SEMICOLON bool_expr SEMICOLON var ASSIGN expression BEGINLOOP help_state_semi ENDLOOP

    NUMBER  shift, and go to state 31

    number  go to state 129


State 107

   30 help_var_comma: var COMMA . help_var_comma

    IDENT  shift, and go to state 4

    help_var_comma  go to state 130
    var             go to state 72
    ident           go to state 49


State 108

   62 help_vne_choices: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 113


State 109

    9 help_state_semi: statement SEMICOLON help_state_semi .

    $default  reduce using rule 9 (help_state_semi)


State 110

   24 statement: var ASSIGN expression .

    $default  reduce using rule 24 (statement)


State 111

   66 var: ident L_SQUARE_BRACKET expression . R_SQUARE_BRACKET

    R_SQUARE_BRACKET  shift, and go to state 131


State 112

   40 help_re_choices: L_PAREN bool_expr R_PAREN .

    $default  reduce using rule 40 (help_re_choices)


State 113

   62 help_vne_choices: L_PAREN expression R_PAREN .

    $default  reduce using rule 62 (help_vne_choices)


State 114

   26 help_if_then: help_state_semi .
   27             | help_state_semi . ELSE help_state_semi

    ELSE  shift, and go to state 132

    $default  reduce using rule 26 (help_if_then)


State 115

   16 statement: IF bool_expr THEN help_if_then . ENDIF

    ENDIF  shift, and go to state 133


State 116

   29 help_or_rae: OR relation_and_expr . help_or_rae

    OR  shift, and go to state 85

    $default  reduce using rule 28 (help_or_rae)

    help_or_rae  go to state 134


State 117

   34 help_and_re: AND relation_expr . help_and_re

    AND  shift, and go to state 87

    $default  reduce using rule 33 (help_and_re)

    help_and_re  go to state 135


State 118

   37 help_re_choices: expression comp expression .

    $default  reduce using rule 37 (help_re_choices)


State 119

   50 help_pm_me: SUB multiplicative_expr . help_pm_me

    SUB  shift, and go to state 96
    ADD  shift, and go to state 97

    $default  reduce using rule 48 (help_pm_me)

    help_pm_me  go to state 136


State 120

   49 help_pm_me: ADD multiplicative_expr . help_pm_me

    SUB  shift, and go to state 96
    ADD  shift, and go to state 97

    $default  reduce using rule 48 (help_pm_me)

    help_pm_me  go to state 137


State 121

   53 help_mdm_term: MULT term . help_mdm_term

    MULT  shift, and go to state 99
    DIV   shift, and go to state 100
    MOD   shift, and go to state 101

    $default  reduce using rule 52 (help_mdm_term)

    help_mdm_term  go to state 138


State 122

   54 help_mdm_term: DIV term . help_mdm_term

    MULT  shift, and go to state 99
    DIV   shift, and go to state 100
    MOD   shift, and go to state 101

    $default  reduce using rule 52 (help_mdm_term)

    help_mdm_term  go to state 139


State 123

   55 help_mdm_term: MOD term . help_mdm_term

    MULT  shift, and go to state 99
    DIV   shift, and go to state 100
    MOD   shift, and go to state 101

    $default  reduce using rule 52 (help_mdm_term)

    help_mdm_term  go to state 140


State 124

   59 term: ident L_PAREN R_PAREN .

    $default  reduce using rule 59 (term)


State 125

   63 help_expr: expression .
   64          | expression . COMMA help_expr

    COMMA  shift, and go to state 141

    $default  reduce using rule 63 (help_expr)

